manifests/cluster/youtubedl-material/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtubedl-material
  namespace: youtubedl-material
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtubedl-material
  template:
    metadata:
      labels:
        app: youtubedl-material
    spec:
      containers:
      - name: youtubedl-material
        image: voc0der/ytdl-material@sha256:7ce087dc5d07071fac9d2e37b6f63c26a14506a3445f17fdef918b0063c02515
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
          requests:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 17442
        volumeMounts:
        - name: appdata
          mountPath: /app/appdata
        - name: audio
          mountPath: /app/audio
        - name: video
          mountPath: /app/video
        - name: subscriptions
          mountPath: /app/subscriptions
        - name: users
          mountPath: /app/users
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: ytdl-appdata
      - name: audio
        persistentVolumeClaim:
          claimName: ytdl-audio
      - name: video
        persistentVolumeClaim:
          claimName: ytdl-video
      - name: subscriptions
        persistentVolumeClaim:
          claimName: ytdl-subscriptions
      - name: users
        persistentVolumeClaim:
          claimName: ytdl-users
